update route pattern
